update request /list
